# babelizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CODE-OF-CONDUCT.rst  CONTRIBUTING.rst  CREDITS.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  cookiecutter.json  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-testing.txt  requirements.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  build-test-ci.yml  docs.yml  lint.yml  prerelease.yml  release.yml  test-cli.yml  test-langs.yml
babelize/: _version.py  errors.py
babelize/cli/: main_babelize.py
babelize/data/pymt_{{cookiecutter.plugin_name}}/: setup.cfg
babelize/templates/hooks/: post_gen_project.py  pre_gen_project.py
babelize/templates/{{cookiecutter.module_name}}/: README.rst  (+1 more)
babelizer/: __init__.py  __main__.py  _cookiecutter.py  _datadir.py  _post_hook.py  _render_file.py  _utils.py  _version.py  cli.py  config.py  errors.py  metadata.py  render.py  utils.py  wrap.py
babelizer/_files/: bmi_py.py  cython.py  gitignore.py  init_py.py  lib_init_py.py  license_rst.py  meson_build.py  readme.py
babelizer/cli/: main_babelize.py
babelizer/data/: .travis.yml  cookiecutter.json
babelizer/data/pymt_{{cookiecutter.plugin_name}}/: .gitignore  .travis.yml  CHANGES.rst  CREDITS.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-library.txt  requirements-testing.txt  requirements.txt  setup.cfg  setup.py
babelizer/data/pymt_{{cookiecutter.plugin_name}}/docs/: Makefile  installation.rst
babelizer/data/pymt_{{cookiecutter.plugin_name}}/pymt_{{cookiecutter.plugin_name}}/: __init__.py  bmi.py
babelizer/data/pymt_{{cookiecutter.plugin_name}}/pymt_{{cookiecutter.plugin_name}}/lib/: __init__.py  _c.pyx  _cxx.pyx  _fortran.pyx  bmi.c  bmi.h  bmi_interoperability.f90
babelizer/data/pymt_{{cookiecutter.plugin_name}}/recipe/: meta.yaml
babelizer/data/templates/: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CREDITS.rst  LICENSE.rst  MANIFEST.in  README.rst  meson.build  noxfile.py.jinja  pyproject.toml  requirements-build.txt  requirements-library.txt
babelizer/data/templates/.github/workflows/: test.yml
babelizer/data/templates/docs/: Makefile  babel.rst  conf.py.jinja  developer_install.rst  environments.rst  index.rst  quickstart.rst  usage.rst
babelizer/data/templates/docs/api/: .gitignore
babelizer/data/templates/{{cookiecutter.package_name}}/: _version.py.jinja
babelizer/data/templates/{{cookiecutter.package_name}}/lib/: __init__.py.jinja  _c.pyx  _cxx.pyx  bmi_interoperability.f90
babelizer/data/templates/{{package.name}}/: _bmi.py.jinja  _version.py.jinja
babelizer/data/templates/{{package.name}}/lib/: __init__.py.jinja  _c.pyx  _cxx.pyx  bmi_interoperability.f90
babelizer/data/templates/{{package_name}}/: __init__.py.jinja
babelizer/data/templates/{{package_name}}/lib/: _fortran.pyx
babelizer/data/{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CREDITS.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.rst  meson.build  noxfile.py  pyproject.toml  requirements-build.txt  requirements-testing.txt  requirements.txt  setup.py  setup_utils.py
babelizer/data/{{cookiecutter.package_name}}/.github/workflows/: black.yml  flake8.yml  lint.yml  test.yml
babelizer/data/{{cookiecutter.package_name}}/docs/: Makefile  babel.rst  conf.py  conf.py.jinja  environments.rst  index.rst  installation.rst  quickstart.rst  updating.rst  usage.rst
babelizer/data/{{cookiecutter.package_name}}/docs/api/: .gitignore  index.rst
babelizer/data/{{cookiecutter.package_name}}/recipe/: meta.yaml
babelizer/data/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  __init__.py.jinja  _bmi.py  bmi.py
babelizer/data/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/lib/: __init__.py  _c.pyx  _cxx.pyx  _fortran.pyx  bmi_interoperability.f90
bmi_wrap/: _version.py  wrap.py
bmi_wrap/cli/: main.py  main_render.py  main_wrap.py
bmi_wrap/data/: cookiecutter.json
bmi_wrap/templates/: cookiecutter.json
conda-recipe/: meta.yaml
docs/source/: babel_heatc.toml  babel_heatcxx.toml  babel_heatf.toml  cli.rst  conf.py  configuration.rst  environment-c.yml  environment-cxx.yml  environment-fortran.yml  environment.yml  example-c.rst  example-cxx.rst  example-fortran.rst  example.rst  glossary.rst  index.rst  input_file.rst  install.rst  use.rst  why.rst
hooks/: post_gen_project.py  pre_gen_project.py
news/: 100.doc  105.doc  72.misc  76.misc  79.misc  81.misc  83.bugfix.1  83.misc.1  83.misc.2  83.misc.3  83.removal.1  84.feature  85.misc  86.doc  88.misc  89.misc  90.feature  91.misc  92.feature  92.misc  93.doc  94.misc  96.misc  97.doc  97.misc.1  97.misc.2
paper/: babel.toml.md  languages.csv  make_config_file_fig.sh  make_language_fig.py  paper.bib  paper.md
pymt_{{cookiecutter.module_name}}/: setup.cfg  setup.py
pymt_{{cookiecutter.module_name}}/recipe/: meta.yaml
pymt_{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: _{{cookiecutter.module_name}}.pyx  bmi.c
pymt_{{cookiecutter.plugin_name}}/: .travis.yml  Makefile  README.rst  requirements.txt  setup.py
pymt_{{cookiecutter.plugin_name}}/docs/: index.rst
pymt_{{cookiecutter.plugin_name}}/meta/: api.yaml
pymt_{{cookiecutter.plugin_name}}/pymt_{{cookiecutter.plugin_name}}/: __init__.py  _{{cookiecutter.plugin_name}}.pyx  bmi.py  component.py  {{cookiecutter.plugin_name}}.py
pymt_{{cookiecutter.plugin_name}}/recipe/: meta.yaml
recipe/: meta.yaml
tests/: cli_test.py  test_c.py  test_cli.py  test_cxx.py  test_fortran.py  test_python.py
tests/test_c/: babel.toml
tests/test_cxx/: babel.toml
tests/test_fortran/: babel.toml
tests/test_python/: babel.toml
{{cookiecutter.module_name}}/: setup.py
{{cookiecutter.module_name}}/meta/: {{cookiecutter.module_name}}_metadata.md
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: _{{cookiecutter.module_name}}.pxd  bmi.c
(+72 files in other folders)
