[build-system]
requires = ["cython", "numpy", "setuptools", "wheel"]

[tool.pytest.ini_options]
minversion = "5.0"
testpaths = ["pymt_{{ cookiecutter.package_name }}", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
    --ignore setup.py
    --tb native
    --strict
    --durations 16
    --doctest-modules
    -vvv
"""
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.check-manifest]
ignore = [
  "pymt_{{ cookiecutter.package_name }}/data",
  "pymt_{{ cookiecutter.package_name }}/data/**/*",
]
