[build-system]
requires = ["cython", "numpy", "setuptools<60", "wheel"]

[project]
name = "{{cookiecutter.package_name}}"
authors = [
  {name = "{{cookiecutter.info.full_name}}", email = "{{cookiecutter.info.email}}"},
]
maintainers = [
  {name = "{{cookiecutter.info.full_name}}", email = "{{cookiecutter.info.email}}"},
]
description = "PyMT plugin for {{cookiecutter.package_name}}"
license = {text = "MIT License"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: {{ cookiecutter.open_source_license }}",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
keywords=["bmi", "pymt"]
dynamic = ["readme", "version"]
dependencies = [
  "numpy",
]

[project.urls]
homepage = "https://github.com/{{ cookiecutter.info.github_username }}/{{ cookiecutter.package_name }}"

[project.entry-points."pymt.plugins"]
{%- for babelized_class, _ in cookiecutter.components|dictsort %}
{{ babelized_class }} = "{{ cookiecutter.package_name }}.bmi:{{ babelized_class }}"
{%- endfor %}

[project.optional-dependencies]
dev = [
  "nox",
]
docs = [
  "sphinx>=4",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinxcontrib.towncrier",
  "pygments>=2.4",
  "sphinx-inline-tabs",
  "furo",
]
testing = [
  "bmi-tester>=0.5.4",
]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CREDITS.rst", "CHANGES.rst", "LICENSE.rst"]}
version = {attr = "{{ cookiecutter.package_name }}._version.__version__"}

[tool.setuptools]
include-package-data = true
packages = ["{{ cookiecutter.package_name }}"]

[tool.setuptools.package-data]
{{ cookiecutter.package_name }} = [
  "data/*",
]

[tool.pytest.ini_options]
minversion = "5.0"
testpaths = ["{{ cookiecutter.package_name }}", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
    --ignore setup.py
    --tb native
    --strict
    --durations 16
    --doctest-modules
    -vvv
"""
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.check-manifest]
ignore = [
  "{{ cookiecutter.package_name }}/data",
  "{{ cookiecutter.package_name }}/data/**/*",
]

[tool.towncrier]
directory = "news"
package = "{{ cookiecutter.package_name }}"
filename = "CHANGES.rst"
single_file = true
underlines = "-^\""
issue_format = "`#{issue} <https://github.com/{{ cookiecutter.info.github_username }}/{{ cookiecutter.package_name }}/issues/{issue}>`_"
title_format = "{version} ({project_date})"
wrap = true
